--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,9 +51,9 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 1em;
   line-height: 1.5;
-  color: #6d6d6d;
+  color: #111111;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
+  background: #fff;
 }
 
 a {
@@ -86,11 +86,11 @@ header h2 {
 
 #container {
   min-height: 595px;
-  background: transparent url(../images/highlight-bg.jpg) 50% 0 no-repeat;
+  /*background: transparent url(../images/highlight-bg.jpg) 50% 0 no-repeat;*/
 }
 
 .inner {
-  width: 620px;
+  width: 960px;
   margin: 0 auto;
 }
 
@@ -338,6 +338,30 @@ footer a:hover {
 .clearfix {display: inline-block;}
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
+
+/* #CUSTOM
+================================================== */
+
+.avatar-img {
+    border: 3px solid white;
+    border-radius: 100px;
+    width: 145px;
+    display: block;
+}
+.page-title{
+  padding:30px;
+}
+
+.alignLeft{
+  float: left;
+}
+.alignRight{
+  float: right;
+}
+
+.clearFloat{
+  clear: both;
+}
 
 /* #Media Queries
 ================================================== */
